# PearlCalculatorRS

./: .gitattributes  Cargo.toml  LICENSE  README.md  README_EN.md
.github/: dependabot.yml
.github/workflows/: Build & Test.yml  pages-deploy.yml  python-wheels.yml  release.yml  test.yml
pearl_calculator_bridge/: Cargo.toml
pearl_calculator_bridge/src/: api.rs  inputs.rs  outputs.rs
pearl_calculator_core/: Cargo.toml
pearl_calculator_core/src/: utils.rs
pearl_calculator_core/src/calculation/: calculation.rs  inputs.rs  optimizer.rs  results.rs  simulation.rs
pearl_calculator_core/src/physics/entities/: movement.rs
pearl_calculator_core/src/settings/: defaults.rs  types.rs
pearl_calculator_core/src/utils/: parallel.rs
pearl_calculator_python/: Cargo.toml  pyproject.toml
pearl_calculator_python/src/: lib.rs
pearl_calculator_ui/: package.json  pnpm-lock.yaml  vite.config.ts
pearl_calculator_ui/src/: i18n.ts
pearl_calculator_ui/src-tauri/: Cargo.toml  tauri.conf.json
pearl_calculator_ui/src-tauri/capabilities/: default.json
pearl_calculator_ui/src-tauri/icons/: README.md
pearl_calculator_ui/src-tauri/src/: lib.rs
pearl_calculator_ui/src-tauri/src/commands/: calculation.rs
pearl_calculator_ui/src/components/: app-sidebar.tsx
pearl_calculator_ui/src/components/calculator/: AdvancedSettingsForm.tsx  BitCalculationPanel.tsx  BitInputRow.tsx  BitInputSection.tsx  BitResultRow.tsx  ConfigurationDataForm.tsx  PearlTracePanel.tsx  RightPanel.tsx  TNTCalculationForm.tsx
pearl_calculator_ui/src/components/calculator/results/: TraceDataPanel.tsx  columns.tsx  data-table.tsx  pearl-momentum-columns.tsx  pearl-trace-columns.tsx
pearl_calculator_ui/src/components/common/: DragDropOverlay.tsx
pearl_calculator_ui/src/components/configuration/: BasicInfoStep.tsx  BitConfigurationStep.tsx  CannonTypeStep.tsx  CompactInput.tsx  PreviewStep.tsx  TNTConfigurationStep.tsx  TNTInputGroup.tsx  VerticalTNTStep.tsx
pearl_calculator_ui/src/components/layout/: AppBreadcrumb.tsx  AppInfo.tsx  Layout.tsx
pearl_calculator_ui/src/components/ui/: scroll-area.tsx
pearl_calculator_ui/src/context/: CalculatorStateContext.tsx  ConfigContext.tsx  ConfigurationStateContext.tsx
pearl_calculator_ui/src/hooks/: use-breadcrumb-items.ts  use-calculator.ts  use-configuration-controller.ts  use-direction-label.ts  use-drag-drop.ts  use-pearl-trace.ts  use-simulator-trace.ts  use-toast-notifications.tsx
pearl_calculator_ui/src/lib/: bit-decoder.ts  bit-template-utils.ts  config-codec.ts  config-service.ts  config-utils.ts  floating-point-utils.ts  schemas.ts
pearl_calculator_ui/src/locales/: en.json  zh.json
pearl_calculator_ui/src/pages/: Calculator.tsx  Configuration.tsx
pearl_calculator_ui/src/services/: index.ts  interface.ts  tauri.ts  wasm.ts
pearl_calculator_ui/src/types/: domain.ts  i18next.d.ts  wasm.d.ts
pearl_calculator_wasm/: Cargo.toml
pearl_calculator_wasm/src/: lib.rs
