[package]
name = "pearl_calculator_core"
version = "2.0.0"
authors = ["MliroLirrorsIngenuity <admin@lolicon.best>", "Lemon_miaow <admin@lemonmiaow.xyz>"]
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
rayon = { version = "1.11.0", optional = true }

[features]
default = ["enable-rayon"]
enable-rayon = ["dep:rayon"]