[package]
name = "pearl_calculator_wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.106"
serde-wasm-bindgen = "0.6"

pearl_calculator_core = { path = "../pearl_calculator_core", default-features = false }
pearl_calculator_bridge = { path = "../pearl_calculator_bridge" }

